recuperação de alterações